wip: adding blog page

--- a/blog/posts/okgu.mdx
+++ b/blog/posts/okgu.mdx
@@ -2,6 +2,7 @@
 title: "Okgu is cute dog"
 date: "January 18, 2023"
 description: "Okgu is very cute dog"
+previewImage: "https://picsum.photos/1810"
 ---
 
 # Okgu
