--- a/blog/posts/hello-world.mdx
+++ b/blog/posts/hello-world.mdx
@@ -1,7 +1,8 @@
 ---
 title: "Markdown Guide"
 date: "Octobar 1, 2018"
-description: "Markdown cheatsheet for all your blogging needs - headers, lists, images, tables and more! An illustrated guide based on GitHub Flavored Markdown."
+description: "Markdown cheatsheet for all your blogging needs - headers, lists, images, tables and more! An illustrated guide based on GitHub Flavored Markdown. Markdown cheatsheet for all your blogging needs - headers, lists, images, tables and more! An illustrated guide based on GitHub Flavored Markdown. Markdown cheatsheet for all your blogging needs - headers, lists, images, tables and more! An illustrated guide based on GitHub Flavored Markdown. Markdown cheatsheet for all your blogging needs - headers, lists, images, tables and more! An illustrated guide based on GitHub Flavored Markdown."
+previewImage: "https://picsum.photos/1800"
 ---
 
 # Introduction
@@ -27,3 +28,12 @@ You can create tables by assembling a list of words and dividing them with hyphe
 | --------------------------- | ---------------------------- |
 | Content from cell 1         | Content from cell 2          |
 | Content in the first column | Content in the second column |
+
+```js
+declare global {
+    interface Window {
+        requestIdleCallback: (callback: (deadline: RequestIdleCallbackDeadline) => void, opts?: RequestIdleCallbackOptions) => RequestIdleCallbackHandle;
+        cancelIdleCallback: (handle: RequestIdleCallbackHandle) => void;
+    }
+}
+```
