blog index done

--- a/blog/posts/okgu.mdx
+++ b/blog/posts/okgu.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Okgu is cute dog"
-date: "January 18, 2023"
+title: "Okgu is cute dog Okgu is cute dog Okgu is cute dog Okgu is cute dog Okgu is cute dog Okgu is cute dog Okgu is cute dog Okgu is cute dog Okgu is cute dog Okgu is cute dog Okgu is cute dog "
+date: "Jan 18, 2023"
 description: "Okgu is very cute dog"
 previewImage: "https://picsum.photos/1810"
 ---
