wip: adding formatter on blog slug page

--- a/blog/posts/test.mdx
+++ b/blog/posts/test.mdx
@@ -23,8 +23,18 @@ If you don't, I'll highly recommend you check them out first.
 - [Next.js](https://nextjs.org)
 - [MDX](https://mdxjs.com)
 
-| Tables   |      Are      |  Cool |
-| -------- | :-----------: | ----: |
-| col 1 is | left-aligned  | $1600 |
-| col 2 is |   centered    |   $12 |
-| col 3 is | right-aligned |    $1 |
+| Tables |      Are      |  Cool |
+| ------ | :-----------: | ----: |
+| col 1  | left-aligned  | $1600 |
+| col 2  |   centered    |   $12 |
+| col 3  | right-aligned |    $1 |
+
+# My MDX page
+
+This is a list in markdown:
+
+- One
+- Two
+- Three
+
+Checkout my React component:
