md overriding default styles

--- a/blog/posts/test.mdx
+++ b/blog/posts/test.mdx
@@ -3,6 +3,7 @@ title: "Test Post"
 date: "Jan 2, 2023"
 description: "Test blog article, this is description"
 previewImage: "https://picsum.photos/1820"
+author: "John Doe"
 ---
 
 # The largest heading
