added formatting on md

--- a/blog/posts/heading-test.mdx
+++ b/blog/posts/heading-test.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Test Post"
+title: "Heading Test"
 date: "Jan 2, 2023"
 description: "Test blog article, this is description"
 previewImage: "https://picsum.photos/1820"
@@ -16,13 +16,24 @@ author: "John Doe"
 1. asdfasdf
 2. asdfasdfasl;dkj
 
+This `&nbsp;` is non-breaking space
+
+&nbsp;
+
+- Test
+- asdfasdf
+
 ## Prerequisites
 
 Before going any further, I am expecting that you atleast have a basic understanding about Next.js and MDX before hand.
 If you don't, I'll highly recommend you check them out first.
 
+&nbsp;
+
 - [Next.js](https://nextjs.org)
 - [MDX](https://mdxjs.com)
+
+&nbsp;
 
 | Tables |      Are      |  Cool |
 | ------ | :-----------: | ----: |
