blog article lists got sorted

--- a/blog/posts/lengthy-test.mdx
+++ b/blog/posts/lengthy-test.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Lengthy text post test"
-date: "Fab 05, 2023"
+date: "Feb 5, 2023"
 description: "The scale of the program grows over time and the amount of data that needs to be processed increases. If the amount of input data is small, ignoring it may not matter much. But if the amount of it is large, the difference in efficiency between algorithms will inevitably increase.
 "
 previewImage: "https://picsum.photos/1812"
