blog slug page formatting added

--- a/blog/posts/lengthy-test.mdx
+++ b/blog/posts/lengthy-test.mdx
@@ -5,6 +5,7 @@ description: "The scale of the program grows over time and the amount of data th
 "
 previewImage: "https://picsum.photos/1812"
 author: "Jongwoo Park"
+published: true
 ---
 
 ---
