PSA is integrated with lastest blog article

--- a/blog/posts/markdown-template.mdx
+++ b/blog/posts/markdown-template.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Markdown Template"
 date: "Feb 10, 2023"
-description: "This is a template for markdown formatting and should not be published on public"
+description: "MD formatting article has added!"
 previewImage: "https://picsum.photos/1820"
 author: "Jongwoo Park"
 published: true
