organized existing articles

--- a/blog/posts/first-article.mdx
+++ b/blog/posts/first-article.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Markdown Template"
-date: "Feb 10, 2023"
-description: "MD formatting article has added!"
-previewImage: "https://picsum.photos/1820"
+title: "First Article"
+date: "Mar 12, 2023"
+description: "First article has been added"
+previewImage: ""
 author: "Jongwoo Park"
-published: false
+published: true
 ---
 
 # h1
