--- a/blog/posts/link-test.mdx
+++ b/blog/posts/link-test.mdx
@@ -4,7 +4,7 @@ date: "Jan 18, 2023"
 description: "Okgu is very cute dog"
 previewImage: "https://picsum.photos/1810"
 author: "Jongwoo Park"
-published: true
+published: false
 ---
 
 # Awesome README [![Awesome](https://cdn.jsdelivr.net/gh/sindresorhus/awesome@d7305f38d29fed78fa85652e3a63e154dd8e8829/media/badge.svg)](https://github.com/sindresorhus/awesome#readme)
