first article added

--- a/blog/posts/first-article.mdx
+++ b/blog/posts/first-article.mdx
@@ -1,88 +1,32 @@
 ---
-title: "First Article"
+title: "Welcome to Our Dev Blog!"
 date: "Mar 12, 2023"
-description: "First article has been added"
-previewImage: ""
+description: "New blog post from DCL-Metrics."
+previewImage: "https://picsum.photos/1812"
 author: "Jongwoo Park"
 published: true
 ---
 
-# h1
+# Hello! Bonjour! こんにちは! 안녕하세요!
 
-## h2
+Welcome to our newly opened DCL-Metrics dev blog! We're excited to use this platform to share our experiences and insights as software developers/user of Decentraland.
+Here at DCL-Metrics, we're a team of passionate two developers who are always looking for ways to improve our craft and share the information to our users.
+Through this blog, we hope to share our experiences with fellow users and anyone else who's interested in the world of Decentraland.
 
-### h3
+### What We'll Cover
 
-#### h4
+We'll be covering a wide range of topics of Decentraland mainly for the moment. We'll also be sharing some of our own feature development journey and experiences, as well as some tips and tricks worth sharing we've learned along the way.
 
-##### h5
+### Why We're Doing This
 
-###### h6
+We believe that by sharing our data and knowledge, we can help users grow and improve their experiences.
+We also hope that this blog will be a place where developers can come together to share their own ideas and experiences,
+and engage in meaningful discussions about the field of software development. [Contribution](https://github.com/DCL-Metrics?type=source) is always welcomed!
 
-# Your-Project-Title
+### Get in Touch
 
-## Description
+We're looking forward to starting this new journey with all of you, and we hope that you'll find our blog to be informative, helpful, and entertaining.
+If you have any suggestions for topics you'd like us to cover, or if you just want to say hello, feel free to send an email (dcl.metrics@gmail.com) or get in touch with us directly.
 
-Provide a short description explaining the what, why, and how of your project. Use the following questions as a guide:
-
-- What was your motivation?
-- Why did you build this project? (Note: the answer is not "Because it was a homework assignment.")
-- What problem does it solve?
-- What did you learn?
-
-## Table of Contents (Optional)
-
-If your README is long, add a table of contents to make it easy for users to find what they need.
-
-- [Installation](#installation)
-- [Usage](#usage)
-- [Credits](#credits)
-- [License](#license)
-
-## Installation
-
-What are the steps required to install your project? Provide a step-by-step description of how to get the development environment running.
-
-## Usage
-
-Provide instructions and examples for use. Include screenshots as needed.
-
-To add a screenshot, create an `assets/images` folder in your repository and upload your screenshot to it. Then, using the relative filepath, add it to your README using the following syntax:
-
-    ```md
-    ![alt text](assets/images/screenshot.png)
-    ```
-
-## Credits
-
-List your collaborators, if any, with links to their GitHub profiles.
-
-If you used any third-party assets that require attribution, list the creators with links to their primary web presence in this section.
-
-If you followed tutorials, include links to those here as well.
-
-## License
-
-The last section of a high-quality README file is the license. This lets other developers know what they can and cannot do with your project. If you need help choosing a license, refer to [https://choosealicense.com/](https://choosealicense.com/).
-
----
-
-🏆 The previous sections are the bare minimum, and your project will ultimately determine the content of this document. You might also want to consider adding the following sections.
-
-## Badges
-
-![badmath](https://img.shields.io/github/languages/top/lernantino/badmath)
-
-Badges aren't necessary, per se, but they demonstrate street cred. Badges let other developers know that you know what you're doing. Check out the badges hosted by [shields.io](https://shields.io/). You may not understand what they all represent now, but you will in time.
-
-## Features
-
-If your project has a lot of features, list them here.
-
-## How to Contribute
-
-If you created an application or package and would like other developers to contribute it, you can include guidelines for how to do so. The [Contributor Covenant](https://www.contributor-covenant.org/) is an industry standard, but you can always write your own if you'd prefer.
-
-## Tests
-
-Go the extra mile and write tests for your application. Then provide examples on how to run them here.
+<br />
+Thanks for reading, and stay tuned for more updates from our team!
