first article added

--- a/blog/posts/first-article.mdx
+++ b/blog/posts/first-article.mdx
@@ -2,10 +2,12 @@
 title: "Welcome to Our Dev Blog!"
 date: "Mar 12, 2023"
 description: "New blog post from DCL-Metrics."
-previewImage: "https://picsum.photos/1812"
+previewImage: "https://thred.com/wp-content/uploads/2022/03/decentraland-main.jpg"
 author: "Jongwoo Park"
 published: true
 ---
+
+![Decentraland](https://thred.com/wp-content/uploads/2022/03/decentraland-main.jpg)
 
 # Hello! Bonjour! こんにちは! 안녕하세요!
 
