--- a/blog/posts/atlas-corp-and-dcl-metrics-help-decentraland-dao-in-data-collection.mdx
+++ b/blog/posts/atlas-corp-and-dcl-metrics-help-decentraland-dao-in-data-collection.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Atlas Corp and DCL-Metrics Help Decentraland DAO in Data Collection"
 date: "Mar 12, 2023"
-description: "New Post - we got featured on community highlights! "
+description: "We got featured on community highlights! "
 previewImage: "https://images.ctfassets.net/ea2ybdmmn1kv/5JMGCVW4PvWU5ysr1kR4AF/8d427242c31fe1811042dec64bf788b7/atlas_metrics.png"
 author: "Jongwoo Park"
 published: true
