update #7 description added

--- a/blog/posts/update-7.mdx
+++ b/blog/posts/update-7.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Project Update #7"
 date: "Mar 15, 2023"
-description: "description"
+description: "Update #7 post has been added."
 previewImage: "https://img.freepik.com/free-vector/update-concept-illustration_114360-5204.jpg?w=1380&t=st=1678810204~exp=1678810804~hmac=1f8a4179dff61b12b2863d9f9e9c470b3f677dd41b0989c882e8b183619f0bbb"
 author: "Dax"
 published: true
@@ -21,7 +21,6 @@ an updated list of the top 50 daily scenes
 up to 90 days of historical visitor data for all scene dashboards
 
 ![](https://i.imgur.com/MGAlZtD.png)
-
 
 <br />
 [https://www.dcl-metrics.com/](https://www.dcl-metrics.com/)
