wip: adding docs..

--- a/markdown/api-list/global-daily.mdx
+++ b/markdown/api-list/global-daily.mdx
@@ -6,6 +6,8 @@ description: "GET /global/daily"
 published: true
 ---
 
+# GET /global/daily
+
 Returns the last 90 days of global stats computed once per day, currently at 1am UTC
 
 ## API ENDPOINT
