--- a/markdown/api-list/global-parcels.mdx
+++ b/markdown/api-list/global-parcels.mdx
@@ -6,6 +6,8 @@ description: "GET /global/parcels"
 published: true
 ---
 
+# GET /global/parcels
+
 Returns the last 90 days of global parcel stats computed once per day, currently 1am UTC
 
 ## API ENDPOINT
