--- a/markdown/api-list/global-scenes.mdx
+++ b/markdown/api-list/global-scenes.mdx
@@ -6,6 +6,8 @@ description: "GET /global/scenes"
 published: true
 ---
 
+# GET /global/scenes
+
 Returns the last 90 days of global scene stats computed once per day, currently at 1am UTC
 
 ## API ENDPOINT
