--- a/markdown/api-list/global-users.mdx
+++ b/markdown/api-list/global-users.mdx
@@ -6,6 +6,8 @@ description: "GET /global/users"
 published: true
 ---
 
+# GET /global/users
+
 Returns the last 90 days of global user stats computed once per day, currently at 1am UTC
 
 ## API ENDPOINT
@@ -19,64 +21,63 @@ Returns the last 90 days of global user stats computed once per day, currently a
   "yesterday": {
     "parcels_visited": [
       {
-        "address": "0x8ef0d5f32de97a92e073d0a687d9d72acedbe3a9",
-        "parcels_visited": 188,
-        "avatar_url": null,
-        "guest_user": true,
-        "name": "Guest User",
-        "verified_user": false
+        "address":"0x8ef0d5f32de97a92e073d0a687d9d72acedbe3a9",
+        "parcels_visited":188,
+        "avatar_url":null,
+        "guest_user":true,
+        "name":"Guest User",
+        "verified_user":false
       },
       {
-        "address": "0x490af306db56507e72f47833d4ff93d8af28a998",
-        "parcels_visited": 159,
+        "address":"0x490af306db56507e72f47833d4ff93d8af28a998",
+        "parcels_visited":159,
         "avatar_url": "https://peer-ec1.decentraland.org/content/contents/bafkreifvfrap3hdoqjhab2zaykkw3rldxoijnebsepab7phihruw2lo5cq",
-        "guest_user": false,
-        "name": "whitehelmet",
-        "verified_user": false
-      }
+        "guest_user":false,
+        "name":"whitehelmet",
+        "verified_user":false
+      },
       // + 8 more
     ],
     "scenes_visited": [
       {
-        "address": "0x8ef0d5f32de97a92e073d0a687d9d72acedbe3a9",
-        "scenes_visited": 54,
-        "avatar_url": null,
-        "guest_user": true,
-        "name": "Guest User",
-        "verified_user": false
+        "address":"0x8ef0d5f32de97a92e073d0a687d9d72acedbe3a9",
+        "scenes_visited":54,
+        "avatar_url":null,
+        "guest_user":true,
+        "name":"Guest User",
+        "verified_user":false
       },
       {
-        "address": "0xd231e488b740526c6335bf279eecc23e80e6df5c",
-        "scenes_visited": 53,
-        "avatar_url": null,
-        "guest_user": true,
-        "name": "Guest User",
-        "verified_user": false
-      }
+        "address":"0xd231e488b740526c6335bf279eecc23e80e6df5c",
+        "scenes_visited":53,
+        "avatar_url":null,
+        "guest_user":true,
+        "name":"Guest User",
+        "verified_user":false
+      },
       // + 8 more
     ],
     "time_spent": [
       {
-        "address": "0xadfaec016975fbad34127017598285e47edae1b4",
-        "time_spent": 85639,
+        "address":"0xadfaec016975fbad34127017598285e47edae1b4",
+        "time_spent":85639,
         "avatar_url": "https://peer-ec1.decentraland.org/content/contents/bafkreidjl2pgteakcowhvssimvhjn32st3mf6uy6ckkhpjbnpmyhzxxswm",
-        "guest_user": false,
-        "name": "Aithrien",
-        "verified_user": true
+        "guest_user":false,
+        "name":"Aithrien",
+        "verified_user":true
       },
       {
-        "address": "0x772c50a4f96b2c19152ee3e58898c7eeba355f4b",
-        "time_spent": 85578,
+        "address":"0x772c50a4f96b2c19152ee3e58898c7eeba355f4b",
+        "time_spent":85578,
         "avatar_url": "https://peer-ec1.decentraland.org/content/contents/bafkreihl6hld46duzcjutbabn66suvrib27e5eg2adc3uqnonbwjy246rm",
-        "guest_user": true,
-        "name": "GabyDG#5f4b",
-        "verified_user": false
-      }
+        "guest_user":true,
+        "name":"GabyDG#5f4b",
+        "verified_user":false
+      },
       // + 8 more
     ]
   },
   "last_week": {},
   "last_month": {},
   "last_quarter": {}
-}
 ```
