--- a/markdown/api-list/parcels-all.mdx
+++ b/markdown/api-list/parcels-all.mdx
@@ -6,6 +6,8 @@ description: "GET /parcels/all"
 published: true
 ---
 
+# GET /parcels/all
+
 Collated data about yesterday's traffic, broken down by parcel. The response size is
 currently around 3MB!
 
