changed order of api list

--- a/markdown/api-list/api-basics.mdx
+++ b/markdown/api-list/api-basics.mdx
@@ -1,8 +1,8 @@
 ---
-category: ""
+category: "api"
 subcategory: ""
-title: "API Basics"
-issue: 11
+title: "basics"
+issue: 0
 description: ""
 published: true
 ---
