--- a/markdown/api-list/peer-status.mdx
+++ b/markdown/api-list/peer-status.mdx
@@ -1,8 +1,8 @@
 ---
-category: ""
+category: "misc"
 subcategory: ""
-title: "Peer Status"
-issue: 12
+title: "peer-status"
+issue: 11
 description: ""
 published: true
 ---
