removed comment on issue

--- a/markdown/api-list/users-address-dao-activity.mdx
+++ b/markdown/api-list/users-address-dao-activity.mdx
@@ -2,7 +2,7 @@
 category: "users"
 subcategory: "address"
 title: "dao_activity"
-issue: 14 // what is this?
+issue: 14
 description: "GET /users/address/dao_activity"
 published: true
 ---
