--- a/markdown/api-list/users-address-nfts.mdx
+++ b/markdown/api-list/users-address-nfts.mdx
@@ -2,7 +2,7 @@
 category: "users"
 subcategory: "address"
 title: "nfts"
-issue: 13 // what is this?
+issue: 13
 description: "GET /users/address/nfts"
 published: true
 ---
