--- a/markdown/api-list/users-address.mdx
+++ b/markdown/api-list/users-address.mdx
@@ -1,7 +1,7 @@
 ---
 category: "users"
 title: "address"
-issue: 12 // what is this?
+issue: 12
 description: "GET /users/address"
 published: true
 ---
