--- a/markdown/posts/update-10.mdx
+++ b/markdown/posts/update-10.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Project Update #10"
 date: "June 15, 2023"
-description: "Update #10: XXXXXX"
+description: "Update #10"
 previewImage: "https://i.imgur.com/Tf0hYMI.png"
 author: "Dax"
 published: true
