user research article published

--- a/markdown/posts/user-research.mdx
+++ b/markdown/posts/user-research.mdx
@@ -1,23 +1,20 @@
 ---
 title: "Help Us Improve Our Website: Be a Part of Our User Research!"
-date: "June 9, 2021"
+date: "June 19, 2023"
 description: "Join Our User Research Initiative and Share Your Valuable Feedback!"
 previewImage: "https://i.imgur.com/lKcp0Nq.jpeg"
 author: "Jongwoo Park"
-published: false
+published: true
 ---
 
 ![Form](https://i.imgur.com/6yolphf.png)
 
-[Link to User Research](https://tally.so/r/wAK6Mo)
+[<h1>Link to User Research</h1>](https://tally.so/r/wAK6Mo)
 
 <h5>We're on a step to level up the usability of our website, and we want your help!</h5>
 
 We're excited to hear your thoughts and suggestions on how we can make our website even better. 
-If you're up for joining us on this adventure, just fill out the form below. Don't worry, we'll keep it <i>anonymous</i>.
-
-<br/>
+If you're up for joining us on this adventure, just fill out the form below. Don't worry, your responses are anonymous.
+<br />
 Your feedback is crucial in our quest to improve our website and make it more user-friendly. 
-We genuinely appreciate your time and input, and we can't wait to see what brilliant ideas you have in store for us.
-<br/>
-Let your voice be heard, and let's create an amazing online experience together. Thank you in advance for your valuable contribution!
+We genuinely appreciate your time and input, and we can't wait to see what brilliant ideas you have in store for us. Thank you in advance for your valuable contribution!
