added survey link btn on article

--- a/markdown/posts/user-research.mdx
+++ b/markdown/posts/user-research.mdx
@@ -9,8 +9,6 @@ published: true
 
 ![Form](https://i.imgur.com/6yolphf.png)
 
-[<h1>Link to User Research</h1>](https://tally.so/r/wAK6Mo)
-
 <h5>We're on a step to level up the usability of our website, and we want your help!</h5>
 
 We're excited to hear your thoughts and suggestions on how we can make our website even better. 
@@ -18,3 +16,5 @@ If you're up for joining us on this adventure, just fill out the form below. Don
 <br />
 Your feedback is crucial in our quest to improve our website and make it more user-friendly. 
 We genuinely appreciate your time and input, and we can't wait to see what brilliant ideas you have in store for us. Thank you in advance for your valuable contribution!
+
+<LinkButton link='https://tally.so/r/wAK6Mo'>Link to User Research</LinkButton>
