wip: working summary, changed description

--- a/markdown/posts/user-research-result.mdx
+++ b/markdown/posts/user-research-result.mdx
@@ -1,7 +1,7 @@
 ---
 title: "User Research Result"
 date: "July 14, 2023"
-description: "We heard you, here we gather your thoughts."
+description: "Your thoughts have been heard and we have gathered them together."
 previewImage: "https://img.freepik.com/free-vector/coding-website-development-technical-support-programming-engineering-coder-web-developer-computer-software-programmer-male-flat-character_335657-206.jpg?w=1380&t=st=1689279417~exp=1689280017~hmac=ebbb592acc31140226a39adda7920a80e4b8aeee8eae890a6cca07bdbddf8070"
 author: "Jongwoo Park"
 published: true
