Make updates to user research results

--- a/markdown/posts/user-research-result.mdx
+++ b/markdown/posts/user-research-result.mdx
@@ -9,27 +9,29 @@ published: true
 
 ![User Testing](https://img.freepik.com/free-vector/coding-website-development-technical-support-programming-engineering-coder-web-developer-computer-software-programmer-male-flat-character_335657-206.jpg?w=1380&t=st=1689279417~exp=1689280017~hmac=ebbb592acc31140226a39adda7920a80e4b8aeee8eae890a6cca07bdbddf8070)
 
-## We've received a lot of feedback from you! 
+## We've received a lot of feedback from you!
 
-Here we've gathered the results of the user research from [the survey](https://dcl-metrics.com/blog/user-research) and user testing session on 11th July we conducted. 
+Here we've gathered the results of the user research from [the survey](https://dcl-metrics.com/blog/user-research) and user testing session on 11th July we conducted.
 There were many valuable insights and suggestions. Some were already in line with our plans, and the other were new ideas that we will definitely consider. Most of opinion were constructive and positive, and we are very happy to hear that!
 <br />
 Here we share the results of the survey and user testing session. We hope you find it interesting and useful! We will surely incorporate these ideas and use them to improve the website.
 
+### Summary
+
 ### User Base and Awareness
 
-We wanted to know the demography of our user base and how they learned about our website. 
+We wanted to know the demographics of our user base and how they learned about our website.
 We also wanted to know how many of them are involved in development and DAO participation.
 <br />
 
-- The majority of respondents learned about our website through Decentraland Discord and [their website](https://dao.decentraland.org/). 
-- Respondents also mentioned social media such as Twitter/Instagram, but not so much as above.
+- The majority of respondents learned about our website through Decentraland Discord and the [DAO website](https://dao.decentraland.org/).
+- Respondents also mentioned social media such as Twitter/Instagram.
 
 ### Development and DAO Participation
 This question was asked to understand the user base and their involvement in Decentraland development and DAO participation.
 <br />
 - Most respondents have participated in development activity regarding Decentraland.
-- Business/private user base are precisely 50:50 surprisingly, a lot more business related users are involved with than I expected.
+- Business/private user base are precisely 50:50 surprisingly - this is much more business related users than we were expecting.
 
 ### Website Visits
 We wanted to know how often users visit the website and how long they stay on the website.
@@ -43,25 +45,24 @@ We wanted to know which components of the website are the most useful and which 
 <br />
 
 - The *Scenes* component group is considered the most useful on the website.
-- *Users* and *Map/Heatmaps* are also mentioned as second useful components.
-- *Parcel* is the least useful part of the site but we aren't particularly focused on it so it is understandable. 
+- *Users* and *Map/Heatmaps* are also mentioned as useful components.
+- The major learning is that we have a lot more user groups than we expected - lots of people use our site with many different goals in mind
 
 ### Missing Metrics
 We wanted to know what metrics are missing from the website that users would find valuable to have in the future.
 <br />
 
-- Respondents mentioned several missing metrics they would find valuable. such as:
-  - Scene history data that goes back further than current range
-  - Ability to scope in/out the historic context
-  - Metrics about specific events, or events in general
-  - World data
-  - Multi-layer intepreted data i.e. decreasing value of the land on top of historic user activity decentraland
-  - New user influx follow-up chart
-  - DAO data
-    - tracks VP and history of it, especially clustered voting activity
-    - More KPIs about DAO participation
-  - Acquisition & more granular retention metrics
-  - Scene tracker - how scenes are being used/evolved over time
+- Scene history data that goes back further than current range
+- Ability to scope in/out the historic context
+- Metrics about specific events, or events in general
+- Worlds data
+- Multi-layer intepreted data i.e. decreasing value of the land on top of historic user activity decentraland
+- New user influx follow-up chart
+- DAO data
+  - tracks VP and history of it, especially clustered voting activity
+  - More KPIs about DAO participation
+- Acquisition & more granular retention metrics
+- Scene tracker - how scenes are being used/evolved over time
 
 ### Main Goals and Satisfaction/Improvement
 We wanted to know what the main goal of visiting the website is and how satisfied they are with the current website design and layout.
@@ -71,4 +72,4 @@ We wanted to know what the main goal of visiting the website is and how satisfie
 - We could see that users also want their own data to be tracked and visualized, which requires a personal dashboard. This is something we are planning to implement in the future.
 - Respondents expressed overall satisfaction with the current website design and layout, thank you!
 - However, some areas for improvement were mentioned, such as labeling data points and providing tooltips. Legends and tooltips are definintely on the way.
-- Also map could be improved to be more interactive and informative. [Genesis.city](https://genesis.city/) is a good example of this and we'd happy to consider about it without losing the functionality of the current map implementation. 
+- Also map could be improved to be more interactive and informative. [Genesis.city](https://genesis.city/) is a good example of this and we'd happy to consider about it without losing the functionality of the current map implementation.
