--- a/markdown/posts/user-research-result.mdx
+++ b/markdown/posts/user-research-result.mdx
@@ -18,6 +18,11 @@ Here we share the results of the survey and user testing session. We hope you fi
 
 ### Summary
 
+- Participants unanimously feel like DCL-Metrics is a valuable service (THANK YOU!) but there is still work to be done
+- There are many reasons that users visit DCL-Metrics, and each group has a specific goal in mind - removing friction for each user group to get the data they need is a priority
+- The biggest issue with existing data is lack of context - we need to more explicitly explain what data we are showing in a given component and any terms so that it is crystal clear what we are displaying
+- More in-depth DAO data and WORLDS data are on the most people's wishlists
+
 ### User Base and Awareness
 
 We wanted to know the demographics of our user base and how they learned about our website.
