Update preview image

--- a/markdown/posts/update-11.mdx
+++ b/markdown/posts/update-11.mdx
@@ -2,7 +2,7 @@
 title: "Project Update #11"
 date: "July 15, 2023"
 description: "Update #11"
-previewImage: "https://i.imgur.com/Tf0hYMI.png"
+previewImage: "https://cdni.iconscout.com/illustration/premium/thumb/business-analytics-and-business-intelligence-2974840-2487734.png"
 author: "Dax"
 published: true
 ---
