formatting on the article

--- a/markdown/posts/second-phase-for-dcl-metrics.mdx
+++ b/markdown/posts/second-phase-for-dcl-metrics.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Update on Our Second Grant Proposal"
 date: "January 20, 2024"
-description: "We've reached the second grant proposal and are happy to share our new roadmap with you."
+description: "Check out our new roadmap and plan for the second phase!"
 previewImage: "https://logowik.com/content/uploads/images/decentraland-wordmark4468.logowik.com.webp"
 author: "Jongwoo"
 published: true
@@ -19,31 +19,40 @@ Our roadmap for the second project phase is brimming with exciting features and 
 <br />
 
 - **Quality of Life Improvements**
-  - Live scene traffic reports, full scene history, scene history by date range, and CSV downloads for scene stats.
+  <br />
+  Live scene traffic reports, full scene history, scene history by date range, and CSV downloads for scene stats.
   <br />
 - **Event Tracker**
-  - Detailed tracking of major events with dedicated data pages per event.
+  <br />
+  Detailed tracking of major events with dedicated data pages per event.
   <br />
 - **Atlas Corp Historical User Data Integration**
-  - An essential step towards a more comprehensive understanding of user engagement.
+  <br /
+  >An essential step towards a more comprehensive understanding of user engagement.
   <br />
 - **Expanded Historical Scene History**
-  - Dive into the top users of a scene over time, retention metrics, and historical charts for new/guest/named users.
+  <br /
+  >Dive into the top users of a scene over time, retention metrics, and historical charts for new/guest/named users.
   <br />
 - **Land/Scene Utilization Graph**
-  - Visualize the ratio of utilized LANDs for a more insightful perspective.
+  <br /
+  >Visualize the ratio of utilized LANDs for a more insightful perspective.
   <br />
 - **Additional Worlds Data**
-  - Historical data and deeper integration with the user page.
+  <br />
+  Historical data and deeper integration with the user page.
   <br />
 - **Retention Metrics**
-  - Calculate the retention rate of scenes and Decentraland as a whole over varying timeframes.
+  <br />
+  Calculate the retention rate of scenes and Decentraland as a whole over varying timeframes.
   <br />
 - **Improved UI/UX**
-  - A variety of chart formatting options, data consistency, and FAQ/legends for enhanced readability.
+  <br />
+  A variety of chart formatting options, data consistency, and FAQ/legends for enhanced readability.
   <br />
 - **Technical Debt Cleanup**
-  - Ensuring the project's sustainability by addressing underlying technical challenges.
+  <br />
+  Ensuring the project's sustainability by addressing underlying technical challenges.
 
 <br />
 If you are interested in detailed timeline for our roadmap, please refer to our [roadmap page](https://dcl-metrics.com/roadmap). 
