fixed formatting on blog article

--- a/markdown/posts/second-phase-for-dcl-metrics.mdx
+++ b/markdown/posts/second-phase-for-dcl-metrics.mdx
@@ -9,9 +9,10 @@ published: true
 
 #### DCL-Metrics - Fundamental Community Metrics #2
 
-We're excited to share the new chapter as we unveil the second phase of DCL-Metrics! The community's support has been invaluable, and after careful consideration and feedback, we're back with a revamped grant proposal aimed not just at sustaining but expanding our platform. You can check out the details of our proposal [here](https://decentraland.org/governance/proposal/?id=5b63274e-1bfb-42cb-b381-396f04a3bb9f). Also, our [user research form](https://tally.so/r/wAK6Mo) is still alive, so please feel free to share your thoughts and feedback with us.
-
-[DCL-Metrics - Fundamental Community Metrics #2](https://decentraland.org/governance/proposal/?id=5b63274e-1bfb-42cb-b381-396f04a3bb9f) [Link to the user research form](https://tally.so/r/wAK6Mo)
+We're excited to share the new chapter as we unveil the second phase of DCL-Metrics! The community's support has been invaluable, and after careful consideration and feedback, 
+we're back with a revamped grant proposal aimed not just at sustaining but expanding our platform. 
+You can check out the details of our proposal here: [DCL-Metrics: Fundamental Community Metrics #2](https://decentraland.org/governance/proposal/?id=5b63274e-1bfb-42cb-b381-396f04a3bb9f). 
+<br />
 
 #### What Is Going to Happen?
 
@@ -57,7 +58,7 @@ Our roadmap for the second project phase is brimming with exciting features and 
 <br />
 If you are interested in detailed timeline for our roadmap, please refer to our [roadmap page](https://dcl-metrics.com/roadmap). 
 Many features and improvements have been implemented based on your feedback, and we welcome the opportunity to continue enhancing our project with your valuable insights. 
-For that matter, some of feature might be developed first or later than the roadmap, so please stay tuned for our updates.
+For that matter, some of feature might be developed first or later than the roadmap, so please stay tuned for our updates. If you have any feature request or suggestions, please feel free to use our feedback button on top. 
 
 <br />
 For the last, we'd like to thank the community for your continued support and feedback. We're excited to share the next chapter of DCL-Metrics with you, and we look forward to your participation in the future of Decentraland!
