--- a/markdown/api-list/api-basics.mdx
+++ b/markdown/api-list/api-basics.mdx
@@ -22,7 +22,7 @@ have both an expiration date and permissions associated with them.
 Assuming your API key is `eb759b1d-8060-4d76-9e38-384103dccf15`, you would call
 the API like this:
 
-```
+```bash
 curl -H "API_KEY: eb759b1d-8060-4d76-9e38-384103dccf15" \
 "https://api.dcl-metrics.com/scenes/search?name=ICE%20Poker&coordinates=-101,128"
 ```
