--- a/markdown/api-list/peer-status.mdx
+++ b/markdown/api-list/peer-status.mdx
@@ -1,9 +1,9 @@
 ---
 category: "misc"
 subcategory: ""
-title: "peer_status"
+title: "Peer status"
 issue: 11
-description: ""
+description: "GET /peer_status"
 published: true
 ---
 
