fixing catch all docs page

--- a/markdown/api-list/peer-status.mdx
+++ b/markdown/api-list/peer-status.mdx
@@ -1,7 +1,7 @@
 ---
 category: "misc"
 subcategory: ""
-title: "Peer status"
+title: "Peer_status"
 issue: 11
 description: "GET /peer_status"
 published: true
