--- a/markdown/posts/maintenance-notice.mdx
+++ b/markdown/posts/maintenance-notice.mdx
@@ -9,17 +9,16 @@ published: true
 
 # 📢 Site Maintenance Notice
 
-
-We'd like to share a quick update regarding the current state of DCL-Metrics. The site will remain online and accessible as usual, but please note that updates and new content will not be published regularly for the time being.
+We want to inform you that DCL-Metrics will no longer be actively updated, as the public API we rely on has been discontinued. As a result, we are no longer able to pull the data required to keep the platform functional and up-to-date.
 
 ### What This Means
 
-- You can continue to browse and use the platform as normal.
-- However, **data and features may not be refreshed or updated frequently**.
-- We're keeping things running, but activity on the site will be minimal for now.
+- The site will remain online in a cached state.
+- All current content and data will still be viewable, but no new data or updates will be available.
 
-### Stay Connected
+### Thank You
 
-If you have any questions, feedback, or would like to get in touch, feel free to reach out to us at **dcl.metrics@gmail.com** or feedback menu on top. Thanks for understanding, and as always, we appreciate your continued interest in DCL-Metrics.
+We sincerely thank everyone who used and supported DCL-Metrics. Although this marks the end of active updates, we hope the existing content remains useful to some of you for reference or historical insights. If you have any questions or would like to get in touch, feel free to contact us at **dcl.metrics@gmail.com** or visit our [GitHub page](https://github.com/DCL-Metrics?type=source).
 
+<br />
 — The DCL-Metrics Team
